--- a/MyAppsProject/Base.lproj/Main.storyboard
+++ b/MyAppsProject/Base.lproj/Main.storyboard
@@ -1,26 +1,89 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Tkj-Te-l88">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Apps Table View Controller-->
+        <scene sceneID="7HV-uW-IFh">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="uLL-py-Gcw" customClass="AppsTableViewController" customModule="MyAppsProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="73" sectionHeaderHeight="28" sectionFooterHeight="28" id="FQl-P6-UcV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="idAppCell" rowHeight="73" id="ByZ-JX-vy4" customClass="AppTableViewCell" customModule="MyAppsProject" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="375" height="73"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ByZ-JX-vy4" id="Xix-cN-jpL">
+                                    <frame key="frameInset" width="375" height="72"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cTn-7q-nDT">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kv1-UW-bt9">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Uj-QK-UeM">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Kv1-UW-bt9" firstAttribute="leading" secondItem="Xix-cN-jpL" secondAttribute="leadingMargin" id="4IR-V9-HB5"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="2Uj-QK-UeM" secondAttribute="bottom" constant="17" id="7X1-Bz-ZKC"/>
+                                        <constraint firstItem="Kv1-UW-bt9" firstAttribute="top" secondItem="cTn-7q-nDT" secondAttribute="bottom" constant="4" id="9fF-b7-5dX"/>
+                                        <constraint firstItem="2Uj-QK-UeM" firstAttribute="top" secondItem="Xix-cN-jpL" secondAttribute="topMargin" constant="18" id="FRn-Gv-Vkz"/>
+                                        <constraint firstItem="cTn-7q-nDT" firstAttribute="top" secondItem="Xix-cN-jpL" secondAttribute="topMargin" constant="10" id="X3F-Go-655"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="2Uj-QK-UeM" secondAttribute="trailing" constant="29" id="cvf-hO-YBA"/>
+                                        <constraint firstItem="cTn-7q-nDT" firstAttribute="leading" secondItem="Xix-cN-jpL" secondAttribute="leadingMargin" id="tvY-t9-Kib"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="genreLabel" destination="Kv1-UW-bt9" id="mRw-42-M3x"/>
+                                    <outlet property="ratingLabel" destination="2Uj-QK-UeM" id="y6a-aQ-UG7"/>
+                                    <outlet property="titleLabel" destination="cTn-7q-nDT" id="p8g-06-qqY"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="uLL-py-Gcw" id="KPO-g5-ml1"/>
+                            <outlet property="delegate" destination="uLL-py-Gcw" id="3T6-Eb-MVs"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="o5k-Os-KoP"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZIH-kE-l2W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="898" y="25"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bij-4q-F2M">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Tkj-Te-l88" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Mhm-R4-X0h">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="uLL-py-Gcw" kind="relationship" relationship="rootViewController" id="lHz-hC-OVq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vNi-mz-j7K" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="156" y="25"/>
         </scene>
     </scenes>
 </document>
