--- a/MyAppsProject/Base.lproj/Main.storyboard
+++ b/MyAppsProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Tkj-Te-l88">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="8nl-JQ-6k1">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -69,7 +69,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZIH-kE-l2W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="898" y="25"/>
+            <point key="canvasLocation" x="1836" y="24.7376311844078"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="EMZ-34-l7N">
@@ -148,12 +148,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Iua-Ef-x2a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1630" y="25"/>
+            <point key="canvasLocation" x="2568.8000000000002" y="24.7376311844078"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Top List-->
         <scene sceneID="bij-4q-F2M">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Tkj-Te-l88" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Top List" id="dqk-rA-gSh"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Mhm-R4-X0h">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -166,7 +167,89 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vNi-mz-j7K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="156" y="25"/>
+            <point key="canvasLocation" x="1095.2" y="24.7376311844078"/>
+        </scene>
+        <!--Wish List Table View Controller-->
+        <scene sceneID="4zv-6Z-x5s">
+            <objects>
+                <tableViewController id="cmL-qA-RE8" customClass="WishListTableViewController" customModule="MyAppsProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" id="ph1-Gf-baT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="wishCell" rowHeight="75" id="HuK-8p-JQK" customClass="WishListTableViewCell" customModule="MyAppsProject" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="375" height="75"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HuK-8p-JQK" id="BXJ-Cd-rCl">
+                                    <frame key="frameInset" width="375" height="74"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BmD-kb-ef6">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="BmD-kb-ef6" firstAttribute="leading" secondItem="BXJ-Cd-rCl" secondAttribute="leadingMargin" id="CJr-3l-LYH"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="BmD-kb-ef6" secondAttribute="trailing" constant="50" id="av0-Kz-WLR"/>
+                                        <constraint firstItem="BmD-kb-ef6" firstAttribute="top" secondItem="BXJ-Cd-rCl" secondAttribute="topMargin" id="scL-1c-SZj"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="BmD-kb-ef6" secondAttribute="bottom" id="xDm-wi-Mt0"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="BmD-kb-ef6" id="gIg-Bn-Myb"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="cmL-qA-RE8" id="AT0-nu-Gva"/>
+                            <outlet property="delegate" destination="cmL-qA-RE8" id="gYr-gK-TEu"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="gKh-yc-0Mr"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s3H-ey-T3f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1836" y="713"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="p1l-da-GVS">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="8nl-JQ-6k1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="MAb-2V-DQp">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Tkj-Te-l88" kind="relationship" relationship="viewControllers" id="LPa-L7-MeC"/>
+                        <segue destination="URx-AH-gYt" kind="relationship" relationship="viewControllers" id="gC8-Ev-WUW"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pll-Ui-Y3M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="108" y="348"/>
+        </scene>
+        <!--Wish List-->
+        <scene sceneID="oMg-CZ-KGH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="URx-AH-gYt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Wish List" id="j0z-cT-k5H"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yQZ-qw-cTy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cmL-qA-RE8" kind="relationship" relationship="rootViewController" id="nud-jw-eHQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dLc-U1-3Kb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1095" y="713"/>
         </scene>
     </scenes>
 </document>
